apps/base/syncthing/app/syncthing.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing-system
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
    - name: http
      port: 8384
      targetPort: http
      protocol: TCP
    - name: sync-tcp
      port: 22000
      targetPort: sync-tcp
      protocol: TCP
    - name: sync-udp
      port: 22000
      targetPort: sync-udp
      protocol: UDP
    - name: discovery
      port: 21027
      targetPort: discovery
      protocol: UDP
