apps/base/syncthing/app/syncthing.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: syncthing-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.intranet.winetree94.com`)
      kind: Rule
      services:
        - name: syncthing
          port: 8384
  tls:
    secretName: letsencrypt-cert
